--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -18,10 +18,18 @@
   <script>
     firebase.initializeApp(window.firebaseConfig);
   </script>
+
+  <style>
+    .logo-header {
+      max-width: 240px;
+      margin: 20px auto 10px;
+      display: block;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>📊 Your Dashboard</h1>
+    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" class="logo-header" />
   </header>
 
   <div class="container">
