--- a/public/repost.html
+++ b/public/repost.html
@@ -15,14 +15,14 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
+      background-color: #f9f9f9;
       color: #333;
       margin: 0;
       padding: 0;
     }
 
     header {
-      background-color: #ff5500;
+      background-color: #2a2a2a; /* Darker, subtle background */
       color: white;
       text-align: center;
       padding: 20px 0;
@@ -30,10 +30,13 @@
 
     h1 {
       font-size: 36px;
+      margin: 0;
     }
 
     .container {
       padding: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
     .track-container {
@@ -87,7 +90,7 @@
     }
 
     button {
-      background-color: #ff5500;
+      background-color: #4caf50; /* Changed to a more calming green */
       color: white;
       padding: 10px 20px;
       border: none;
@@ -98,7 +101,7 @@
     }
 
     button:hover {
-      background-color: #e04d00;
+      background-color: #45a049; /* Slightly darker green */
     }
 
     footer {
@@ -209,5 +212,6 @@
   </script>
 </body>
 </html>
+
 
 
