--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
 
   <!-- ✅ Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
 
   <!-- ✅ Firebase Config -->
   <script src="/js/firebaseConfig.js"></script>
@@ -34,18 +34,21 @@
 
   <main class="container">
     <h2>🚀 Submit Your Track for Reposts</h2>
+    <p id="current-credits">Loading credits...</p>
+
     <form id="campaign-form" class="campaign-form">
       <label for="trackUrl">SoundCloud Track URL:</label>
-      <input type="url" id="trackUrl" required />
+      <input type="url" id="trackUrl" name="trackUrl" required />
 
       <label for="genre">Genre:</label>
-      <input type="text" id="genre" required />
+      <input type="text" id="genre" name="genre" required />
 
       <label for="credits">Credits to Spend:</label>
-      <input type="number" id="credits" min="1" required />
+      <input type="number" id="credits" name="credits" min="1" required />
 
       <button type="submit">🎯 Launch Campaign</button>
     </form>
+
     <div id="status" class="status-message"></div>
   </main>
 
@@ -54,16 +57,7 @@
   </footer>
 
   <!-- ✅ JS Scripts -->
-  <script src="/js/submit-campaign.js" defer></script>
+  <script src="/js/submit-campaign.js" type="module"></script>
   <script src="/js/header.js" defer></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
